--- a/templates/template.html
+++ b/templates/template.html
@@ -9,6 +9,7 @@
     <script src="/static/js/bootstrap.js" defer></script>
     <script src="/static/js/dropzone.js"></script>
     <script src="/static/js/jquery.js"></script>
+    <link rel="shortcut icon" href="/static/media/one_bite_logo.webp" type="image/x-icon">
     {% block head %}
     {% endblock %}
     <title>OneFry</title>
